# SampleGenerator

./: .gitignore  Makefile  Makefile.build  Makefile.clean  Makefile.tests  README.md
.github/workflows/: greetings.yml
docs/: DOCS.md
src/generateNote/: pyproject.toml
src/generateNote/src/generateNote/: generateNote.py
src/generateWave/: Manifest.toml  Project.toml
src/generateWave/src/: generateWave.jl
tests/checkWAVE/: Project.toml
tests/checkWAVE/src/: checkWave.jl
tests/playMIDI/: pyproject.toml
tests/playMIDI/src/testPlayMIDI/: testPlayMIDI.py
tests/playWAVE/: Manifest.toml  Project.toml
tests/playWAVE/src/: playWave.jl
